--- a/BackOffice.Desk/BackOffice.Desk.UI/App.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.UI/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:BackOffice.Desk.UI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/BackOffice.Desk.Theme.Base;component/BackOffice.Desk.Theme.Base.xaml" />
+                <ResourceDictionary Source="/BackOffice.Desk.Theme.Default;component/ThemeSettings.xaml"/>
+                <ResourceDictionary Source="/BackOffice.Desk.UI.Common;component/View/ViewTemplate.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
