--- a/BackOffice.Desk/BackOffice.Desk.UI.Common/View/ViewTemplate.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.UI.Common/View/ViewTemplate.xaml
@@ -4,10 +4,15 @@
     <DataTemplate DataType="{x:Type sections:ClientsViewModel}">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0">Clients view...</TextBlock>
+            <DataGrid Margin="5" ItemsSource="{Binding Items}" AutoGenerateColumns="False" ColumnWidth="*">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+                    <DataGridTextColumn Header="Phone Number" Binding="{Binding PhoneNumber}"/>
+                </DataGrid.Columns>
+            </DataGrid>
         </Grid>
     </DataTemplate>
 </ResourceDictionary>
