--- a/BackOffice.Desk/BackOffice.Desk.Theme.Default/ThemeSettings.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.Theme.Default/ThemeSettings.xaml
@@ -1,4 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <SolidColorBrush x:Key="WindowBackgroundColor" Color="#eff2f7"/>
+    <SolidColorBrush x:Key="MenuButtonForeground" Color="#6e7783"/>
+    <SolidColorBrush x:Key="MenuButtonHoverBackground" Color="#dcdcdc"/>
 </ResourceDictionary>
