--- a/BackOffice.Desk/BackOffice.Desk.UI/MainWindow.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.UI/MainWindow.xaml
@@ -3,15 +3,27 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:local="clr-namespace:BackOffice.Desk.UI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1600">
+        Title="MainWindow" Height="800" Width="1600" 
+        Style="{StaticResource WindowStyle}"
+        AllowsTransparency="True" 
+        WindowStyle="None" 
+        MouseDown="Window_MouseDown">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.35*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="0.1*"/>
         </Grid.ColumnDefinitions>
-        <ContentControl Grid.Column="0" Content="{Binding Clients}"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.1*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Button Style="{StaticResource MenuButton}" Margin="10 0 0 0">
+            <icon:PackIconMaterial Kind="Menu" Width="15" Height="15"/>
+        </Button>
+        <!--<ContentControl Margin="20" Grid.Column="0" Content="{Binding Clients}"/>-->
     </Grid>
 </Window>
