--- a/BackOffice.Desk/BackOffice.Desk.UI.Common/View/ViewTemplate.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.UI.Common/View/ViewTemplate.xaml
@@ -1,18 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:sections="clr-namespace:BackOffice.Desk.UI.Common.ViewModel.Sections">
-    <DataTemplate DataType="{x:Type sections:ClientsViewModel}">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <DataGrid Margin="5" ItemsSource="{Binding Items}" AutoGenerateColumns="False" ColumnWidth="*">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
-                    <DataGridTextColumn Header="Phone Number" Binding="{Binding PhoneNumber}"/>
-                </DataGrid.Columns>
-            </DataGrid>
-        </Grid>
+                    xmlns:viewmodel="clr-namespace:BackOffice.Desk.UI.Common.ViewModel.ViewModels"
+                    xmlns:views="clr-namespace:BackOffice.Desk.UI.Common.View">
+    <DataTemplate DataType="{x:Type viewmodel:ClientsViewModel}">
+        <views:ClientsView />
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type viewmodel:HomeViewModel}">
+        <views:HomeView />
     </DataTemplate>
 </ResourceDictionary>
