Add orders view.

--- a/BackOffice.Desk/BackOffice.Desk.UI.Common/View/ViewTemplate.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.UI.Common/View/ViewTemplate.xaml
@@ -8,4 +8,7 @@
     <DataTemplate DataType="{x:Type viewmodel:HomeViewModel}">
         <views:HomeView />
     </DataTemplate>
+    <DataTemplate DataType="{x:Type viewmodel:OrdersViewModel}">
+        <views:OrdersView />
+    </DataTemplate>
 </ResourceDictionary>
