--- a/BackOffice.Desk/BackOffice.Desk.UI.Common/View/HomeView.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.UI.Common/View/HomeView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BackOffice.Desk.UI.Common.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Style="{StaticResource PageStyle}">
     <Grid>
         <TextBlock Text="Home page"></TextBlock>
     </Grid>
