--- a/BackOffice.Desk/BackOffice.Desk.UI.Common/View/OrdersView.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.UI.Common/View/OrdersView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="BackOffice.Desk.UI.Common.View.ClientsView"
+﻿<UserControl x:Class="BackOffice.Desk.UI.Common.View.OrdersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Style="{StaticResource PageStyle}">
     <Grid>
-        <TextBlock Text="Clients page"></TextBlock>
+        <TextBlock Text="Orders page"></TextBlock>
     </Grid>
 </UserControl>
