Add products view.

--- a/BackOffice.Desk/BackOffice.Desk.UI.Common/View/ViewTemplate.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.UI.Common/View/ViewTemplate.xaml
@@ -11,4 +11,7 @@
     <DataTemplate DataType="{x:Type viewmodel:OrdersViewModel}">
         <views:OrdersView />
     </DataTemplate>
+    <DataTemplate DataType="{x:Type viewmodel:ProductsViewModel}">
+        <views:ProductsView />
+    </DataTemplate>
 </ResourceDictionary>
