Adding new product button.

--- a/BackOffice.Desk/BackOffice.Desk.Theme.Base/BackOffice.Desk.Theme.Base.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.Theme.Base/BackOffice.Desk.Theme.Base.xaml
@@ -100,6 +100,33 @@
     </Style>
 
     <!--#endregion-->
+    <!--#region Operation button-->
+    <Style x:Key="NewOperationButton" TargetType="Button">
+        <Setter Property="Background" Value="#6741d9" />
+        <Setter Property="Foreground" Value="#fff" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+        <Setter Property="Height" Value="35" />
+        <Setter Property="HorizontalAlignment" Value="Right" />
+        <Setter Property="Margin" Value="20 0 0 0"/>
+        <Setter Property="FontSize" Value="13" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}" CornerRadius="7">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#7b5cd6" />
+                <Setter Property="Foreground" Value="#fff" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <!--#endregion-->
     <!--#region Page style-->
     <Style x:Key="PageStyle" TargetType="{x:Type UserControl}">
         <Setter Property="RenderTransform">
