--- a/BackOffice.Desk/BackOffice.Desk.UI.Common/View/ProductsView.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.UI.Common/View/ProductsView.xaml
@@ -4,9 +4,24 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BackOffice.Desk.UI.Common.View"
+             xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Style="{StaticResource PageStyle}">
     <Grid>
-        <TextBlock>Products page</TextBlock>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.1*"/>
+            <RowDefinition Height="0.1*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="0.1*"/>
+        </Grid.RowDefinitions>
+        <DockPanel>
+            <TextBlock HorizontalAlignment="Left" Text="Products" FontSize="32" FontWeight="SemiBold" Margin="20 0 0 0"></TextBlock>
+            <Button HorizontalAlignment="Right" Width="200" Style="{StaticResource NewOperationButton}">
+                <StackPanel Orientation="Horizontal">
+                    <icon:PackIconMaterial Kind="BoxShadow" Style="{StaticResource MenuItemButtonIcon}"/>
+                    <TextBlock VerticalAlignment="Center" Text="Add new product"/>
+                </StackPanel>
+            </Button>
+        </DockPanel>
     </Grid>
 </UserControl>
