--- a/BackOffice.Desk/BackOffice.Desk.Theme.Base/BackOffice.Desk.Theme.Base.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.Theme.Base/BackOffice.Desk.Theme.Base.xaml
@@ -127,6 +127,32 @@
         </Style.Triggers>
     </Style>
     <!--#endregion-->
+    <!--region Tab button-->
+    <Style x:Key="TabButton" TargetType="{x:Type Button}">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="#121518" />
+        <Setter Property="Margin" Value="10 0 0 0"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+        <Setter Property="Height" Value="45" />
+        <Setter Property="BorderBrush" Value="Transparent" />
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="FontWeight" Value="SemiBold"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}" BorderThickness="0 0 0 1" BorderBrush="{TemplateBinding BorderBrush}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="BorderBrush" Value="#784ff2"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <!--#endregion-->
     <!--#region Page style-->
     <Style x:Key="PageStyle" TargetType="{x:Type UserControl}">
         <Setter Property="RenderTransform">
