--- a/BackOffice.Desk/BackOffice.Desk.Theme.Default/ThemeSettings.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.Theme.Default/ThemeSettings.xaml
@@ -5,4 +5,5 @@
     <SolidColorBrush x:Key="MenuButtonHoverBackground" Color="#dcdcdc"/>
     <SolidColorBrush x:Key="MenuItemButtonForeground" Color="#d0c0ff"/>
     <SolidColorBrush x:Key="MenuItemButtonHoverBackground" Color="#7b5cd6"/>
+    <SolidColorBrush x:Key="SeparatorBackgroundColor" Color="#dae2ea" />
 </ResourceDictionary>
