--- a/BackOffice.Desk/BackOffice.Desk.UI.Common/View/ProductsView.xaml
+++ b/BackOffice.Desk/BackOffice.Desk.UI.Common/View/ProductsView.xaml
@@ -11,6 +11,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="0.1*"/>
             <RowDefinition Height="0.1*"/>
+            <RowDefinition Height="0.1*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
@@ -27,6 +28,10 @@
         <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0 2 0 0">
             <Button Style="{StaticResource TabButton}" Content="Wheels"></Button>
             <Button Style="{StaticResource TabButton}" Content="Accumulators"></Button>
+        </StackPanel>
+        <StackPanel Grid.Row="2" Orientation="Horizontal">
+            <TextBlock FontSize="14" FontWeight="SemiBold" Margin="10 0 0 0" VerticalAlignment="Center" Text="Total products: "/>
+            <TextBlock FontSize="14" FontWeight="SemiBold" VerticalAlignment="Center" Text="{Binding Items.Count}"/>
         </StackPanel>
     </Grid>
 </UserControl>
